--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -51,20 +51,17 @@
                             <a class="nav-link" href="#">Profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                            <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_register') }}">Register</a>
+                            <a class="nav-link" href="{{ path('app_register') }}">S'enregistrer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_login') }}">login</a>
+                            <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
                         </li>
                     {% endif %}
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
-                </form>
             </div>
         </div>
     </nav>
@@ -75,11 +72,11 @@
                     <div class="card h-100 shadow p-3 mb-5 bg-body rounded">
                         <img src="{{ projet.ImgProjet }}" class="card-img-top" alt="{{ projet.Titre }}_IMG">
                         <div class="card-body">
-                            <h5 class="card-title">{{ projet.Titre }}</h5>
+                            <h5 class="card-title"><a class="link-dark" href="{{ path('projets_show', {'id': projet.id}) }}">{{ projet.Titre }}</a></h5>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="{{ projet.Progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ projet.Progress }}%">{{ projet.Progress }} %</div>
                             </div>
-                            <p class="card-text">{{ projet.Description|u.truncate(50,'...', false) }}</p>
+                            <p class="card-text">{{ projet.Description|u.truncate(100,'...', false) }}</p>
                             <p class="text-muted">{{ projet.UpdatedAt|ago }}</p>
                         </div>
                     </div>
