--- a/templates/projets/index.html.twig
+++ b/templates/projets/index.html.twig
@@ -28,7 +28,7 @@
                     {% if is_granted('ROLE_USER') %}
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Projets
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -39,7 +39,7 @@
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('projets_index') }}">Projets</a>
+                                <a class="nav-link active" href="{{ path('projets_index') }}">Projets</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
@@ -51,14 +51,14 @@
                             <a class="nav-link" href="#">Profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                            <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_register') }}">Register</a>
+                            <a class="nav-link" href="{{ path('app_register') }}">S'enregistrer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_login') }}">login</a>
+                            <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -69,7 +69,7 @@
         </div>
     </nav>
     <main>
-        <h2>Projets index</h2>
+        <h2 class="text-center">Projets index</h2>
         <div class="table-responsive ms-3 me-3">
             <table class="table align-middle table-striped table-hover">
                 <thead class="table table-dark">
@@ -88,11 +88,13 @@
                         <td>{{ projet.id }}</td>
                         <td>{{ projet.ImgProjet }}</td>
                         <td>{{ projet.Titre }}</td>
-                        <td>{{ projet.Description }}</td>
+                        <td>{{ projet.Description|u.truncate(50,'...', false) }}</td>
                         <td>{{ projet.Progress }} %</td>
                         <td>
-                            <a href="{{ path('projets_show', {'id': projet.id}) }}">show</a>
-                            <a href="{{ path('projets_edit', {'id': projet.id}) }}">edit</a>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <a class="btn btn-outline-warning btn-sm" role="button" href="{{ path('projets_edit', {'id': projet.id}) }}">Modifier</a>
+                            {% endif %}
+                            <a class="btn btn-outline-info btn-sm" role="button" href="{{ path('projets_show', {'id': projet.id}) }}">Détail</a>
                         </td>
                     </tr>
                 {% else %}
