--- a/templates/projets/show.html.twig
+++ b/templates/projets/show.html.twig
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('home') }}">
+                        <a class="nav-link" aria-current="page" href="{{ path('home') }}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
                                 <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
                             </svg>
@@ -28,7 +28,7 @@
                     {% if is_granted('ROLE_USER') %}
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Projets
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -39,7 +39,7 @@
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('projets_index') }}">Projets</a>
+                                <a class="nav-link active" href="{{ path('projets_index') }}">Projets</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
@@ -51,58 +51,36 @@
                             <a class="nav-link" href="#">Profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                            <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_register') }}">Register</a>
+                            <a class="nav-link" href="{{ path('app_register') }}">S'enregistrer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_login') }}">login</a>
+                            <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
                         </li>
                     {% endif %}
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
-                </form>
             </div>
         </div>
     </nav>
     <main>
-        <div class="row">
-            <div class="col-md-6 mx-auto border shadow bg-body rounded">
-                <h1>Projets</h1>
-
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <th>Id</th>
-                            <td>{{ projet.id }}</td>
-                        </tr>
-                        <tr>
-                            <th>Titre</th>
-                            <td>{{ projet.Titre }}</td>
-                        </tr>
-                        <tr>
-                            <th>Description</th>
-                            <td>{{ projet.Description }}</td>
-                        </tr>
-                        <tr>
-                            <th>ImgProjet</th>
-                            <td>{{ projet.ImgProjet }}</td>
-                        </tr>
-                        <tr>
-                            <th>Progress</th>
-                            <td>{{ projet.Progress }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-
-                <a href="{{ path('projets_index') }}">back to list</a>
-
-                <a href="{{ path('projets_edit', {'id': projet.id}) }}">edit</a>
-
-                {{ include('projets/_delete_form.html.twig') }}
+        <h1 class="text-center">Détail projet</h1>
+        <div class="card mb-3 col-md-6 mx-auto border shadow bg-body rounded">
+            <img src="{{ projet.ImgProjet }}" class="card-img-top" alt="{{ projet.Titre }}_IMG">
+            <div class="card-body">
+                <h5 class="card-title">{{ projet.Titre }}</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="{{ projet.Progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ projet.Progress }}%">{{ projet.Progress }} %</div>
+                </div>
+                <p class="card-text">{{ projet.Description }}</p>
+                <p class="card-text"><small class="text-muted">{{ projet.UpdatedAt|ago }}</small></p>
+                <a class="btn btn-outline-secondary btn-sm mb-1"href="{{ path('projets_index') }}">Retour</a>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a class="btn btn-outline-warning btn-sm mb-1" role="button" href="{{ path('projets_edit', {'id': projet.id}) }}">Modifier</a>
+                    {{ include('projets/_delete_form.html.twig') }}
+                {% endif %}
             </div>
         </div>
     </main>
