--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('home') }}">
+                        <a class="nav-link" aria-current="page" href="{{ path('home') }}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
                                 <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
                             </svg>
@@ -39,27 +39,24 @@
                             <a class="nav-link" href="#">Profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                            <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_register') }}">Register</a>
+                            <a class="nav-link active" href="{{ path('app_register') }}">S'enregistrer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_login') }}">login</a>
+                            <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
                         </li>
                     {% endif %}
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
-                </form>
             </div>
         </div>
     </nav>
     <main>
         <div class="row">
             <div class="col-md-6 mx-auto border shadow bg-body rounded">
-                <h1>Register</h1>
+                <h1 class="text-center">Création de compte</h1>
                 {{ form_start(registrationForm) }}
                     {{ form_row(registrationForm.email) }}
                     {{ form_row(registrationForm.LastName) }}
@@ -69,8 +66,9 @@
                         label: 'Password'
                     }) }}
                     {{ form_row(registrationForm.agreeTerms) }}
-
-                    <button type="submit" class="btn">Register</button>
+                    <div class="d-grid gap-2 col-6 mx-auto mb-3">
+                        <button type="submit" class="btn btn-outline-success">S'enregistrer</button>
+                    </div>
                 {{ form_end(registrationForm) }}
             </div>
         </div>
